--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -3,6 +3,8 @@
 {
 	font-family: 'Roboto', sans-serif;
 	-webkit-font-smoothing: antialiased;
+	width: 100%;
+	height: 100%;
 }
 body
 {
@@ -11,7 +13,7 @@ body
 }
 h1
 {
-	color: #FFFFFF;
+	color: #000000;
 	margin: 0px;
 	padding: 10px;
 	font-size: 2em;
@@ -29,12 +31,13 @@ hr
 }
 .navbar
 {
-	background-color: #373F51;
+	background-color: #FFFFFF;
 	position: relative;
 	display: flex;
 	width: 100%;
 	margin: 0px;
 	border: 0px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .search
 {
@@ -48,7 +51,7 @@ hr
 	left: calc(100% - 430px);
 	float: right;
 	background-color: #FFFFFF;
-	color: #A9BCD0;
+	color: #FFFFFFF;
 	outline: none;
 }
 .search:focus
@@ -58,8 +61,8 @@ hr
 .submit
 {
 	outline: 0px;
-	color: #FFFFFF;
-	background-color: #373F51;
+	color: #000000;
+	background-color: #FFFFFF;
 	height: 1.75em;
 	padding: 7px;
 	font-size: 1.6em;
@@ -76,10 +79,36 @@ hr
 }
 .body
 {
-	display: inline-flex;
+	display: flex;
 	flex-direction: row;
-	width: auto;
-	height: auto;
+	width: 100%;
+	height: 100%;
+}
+.ldiv
+{
+	margin: auto;
+	display: block;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+.githubUser
+{
+	animation: rotation 2s infinite linear;
+	margin: 0px;
+	width: 12%;
+	height: 12%;
+	z-index: 1;
+}
+.loading1
+{
+	color: #000000;
+	font-size: 2.5em;
+	width: 180px;
+	margin: 0px;
+	z-index: 2;
 }
 .result_body
 {
@@ -95,7 +124,8 @@ hr
 	margin: 10px;
 	margin-bottom: 5px;
 	padding: 10px;
-	background-color: #5B6170;
+	background-color: #FFFFFF;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .image
 {
@@ -111,8 +141,9 @@ hr
 	margin: 10px;
 	margin-bottom: 5px;
 	padding: 10px;
-	background-color: #5B6170;
-	color: #FFFFFF;
+	background-color: #FFFFFF;
+	color: #000000;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .realname
 {
@@ -120,7 +151,7 @@ hr
 	margin: 0px;
 	margin-right: 0px;
 	font-size: 2em;
-	color: #FFFFFF;
+	color: #000000;
 	height: auto;
 }
 .username
@@ -129,7 +160,7 @@ hr
 	margin: 0px;
 	margin-right: 0px;
 	font-size: 1.2em;
-	color: #FFFFFF;
+	color: #000000;
 	padding-top: 0px;
 	height: auto;
 }
@@ -139,7 +170,7 @@ hr
 	margin: 0px;
 	margin-right: 0px;
 	font-size: .8em;
-	color: #FFFFFF;
+	color: #000000;
 	padding-top: 10px;
 	height: auto;
 }
@@ -150,14 +181,15 @@ hr
 	height: auto;
 	margin: 10px;
 	margin-bottom: 5px;
-	background-color: #5B6170;
-	color: #FFFFFF;
+	background-color: #FFFFFF;
+	color: #000000;
 	padding: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .rTitle
 {
 	margin: 0px;
-	color: #FFFFFF;
+	color: #000000;
 	font-size: 1.2em;
 	padding-bottom: 5px;
 }
@@ -167,14 +199,14 @@ hr
 	margin: 0px;
 	margin-right: 0px;
 	font-size: .8em;
-	color: #FFFFFF;
+	color: #000000;
 	padding: 0px;
 	height: auto;
 }
 .repoToggle
 {
-	color: #FFFFFF;
-	background-color: #5B6170;
+	color: #000000;
+	background-color: #FFFFFF;
 	padding: 0px;
 	padding-top: 5px;
 	border: none;
@@ -196,7 +228,7 @@ hr
 {
 	padding: 2px;
 	font-size: 1em;
-	color: #FFFFFF;
+	color: #000000;
 }
 .repolink:hover
 {
@@ -223,6 +255,41 @@ hr
 	margin-left: 0px;
 	margin-bottom: 5px;
 	padding: 10px;
-	background-color: #5B6170;
+	background-color: #FFFFFF;
+	color: #000000;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.visual
+{
+	display: inline-flex;
+}
+.githubGraph
+{
+	diplay: block;
+	position: rabsolute;
+	animation: rotation 2s infinite linear;
+	margin: auto;
+	margin-top: 100px;
+	width: 30%;
+	height: 30%;
+	top: calc(50% + 24);
+	z-index: 1;
+}
+.loading2
+{
 	color: #FFFFFF;
+	top: 70%;
+	left: 40%;
+	position: absolute;
+	z-index: 2;
+}
+@keyframes rotation
+{
+	from
+	{
+		transform: rotate(0deg);
+	}to
+	{
+		transform: rotate(359deg);
+	}
 }
