graph working for small samples

--- a/src/assets/css/loading.css
+++ b/src/assets/css/loading.css
@@ -33,6 +33,7 @@ div.spinner
 }
 div.spinner > div
 {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	background-color: #6DACFD;
 	height: 100%;
 	width: 30px;
