--- a/src/assets/css/graph.css
+++ b/src/assets/css/graph.css
@@ -3,8 +3,8 @@ div.gDiv
 	-webkit-animation: slide-left 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
 			animation: slide-left 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
 	display: inline-flex;
-	width: 400px;
-	height: 400px;
+	width: 600px;
+	height: 600px;
 	margin-top: 20px;
 	padding: 10px;
 	background-color: #FFFFFF;
@@ -39,6 +39,7 @@ div.spinner2
 }
 div.spinner2 > div
 {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	background-color: #6DACFD;
 	height: 100%;
 	width: 30px;
