--- a/src/assets/css/graph.css
+++ b/src/assets/css/graph.css
@@ -1,12 +1,11 @@
 div.gDiv
 {
-	-webkit-animation: slide-left 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
-			animation: slide-left 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
+	-webkit-animation: slide-left .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
+			animation: slide-left .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
 	display: inline-flex;
 	width: 600px;
 	height: 600px;
 	margin-top: 20px;
-	margin-left: 20px;
 	padding: 10px;
 	background-color: #FFFFFF;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -16,15 +15,31 @@ svg.visual
 	display: inline-flex;
 	color: #000000;
 }
+div.badGraph
+{
+	-webkit-animation: slide-left .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
+			animation: slide-left .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
+	display: inline-flex;
+	width: 600px;
+	height: 50px;
+	margin-top: 20px;
+	padding: 10px;
+	background-color: #FFFFFF;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+p.fork
+{
+	margin: 0px;
+	font-size: 1.2em;
+}
 div.gInfoDiv
 {
-	-webkit-animation: slide-left 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
-			animation: slide-left 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
+	-webkit-animation: slide-left .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
+			animation: slide-left .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
 	display: inline-flex;
 	width: 600px;
 	height: 20px;
 	margin-top: 20px;
-	margin-left: 20px;
 	padding: 10px;
 	background-color: #FFFFFF;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
