--- a/src/assets/css/profile.css
+++ b/src/assets/css/profile.css
@@ -1,3 +1,19 @@
+div.error
+{
+	width: 110px;
+	height: 20px;
+	margin: 0px;
+	position: absolute;
+	top: calc(50% - 20px);
+	left: calc(50% - 80px);
+	padding: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+p.errorMsg
+{
+	font-size: 1em;
+	margin: 0px;
+}
 div.result_body
 {
 	display: flex;
@@ -7,8 +23,8 @@ div.result_body
 }
 div.pdiv
 {
-	-webkit-animation: slide-right 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
-			animation: slide-right 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
+	-webkit-animation: slide-right .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
+			animation: slide-right .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
 	width: 220px;
 	height: 220px;
 	align-self: center;
@@ -24,13 +40,12 @@ img.image
 }
 div.user
 {
-	-webkit-animation: slide-right 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
-			animation: slide-right 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
+	-webkit-animation: slide-right .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
+			animation: slide-right .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
 	display: block;
 	width: 400px;
 	height: auto;
-	margin-top: 20px;
-	margin-left: 20px;
+	margin: 20px;
 	padding: 10px;
 	background-color: #FFFFFF;
 	color: #000000;
@@ -67,13 +82,13 @@ p.bio
 }
 div.rDiv
 {
-	-webkit-animation: slide-right 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
-			animation: slide-right 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
+	-webkit-animation: slide-right .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
+			animation: slide-right .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
 	display: block;
 	width: 400px;
 	height: auto;
 	margin: 20px;
-	margin-right: 0px;
+	margin-top: 0px;
 	background-color: #FFFFFF;
 	color: #000000;
 	padding: 10px;
