--- a/src/assets/css/graph.css
+++ b/src/assets/css/graph.css
@@ -55,55 +55,23 @@ p.gInfo
 	font-size: .88em;
 	margin: 0px;
 }
-p.loading2
-{
-	position: absolute;
-	display: inline-block;
-	color: #FFFFFF;
-	font-size: 1.3em;
-	top: 275px;
-	width: 165px;
-	left: 265px;
-}
-div.spinner2
-{
-	position: relative;
-	margin: auto;
-	margin-top: 200px;
-	display: block;
-	align-self: center;
-	width: 500px;
-	height: 200px;
+div.tooltip
+{		
 	text-align: center;
-	font-size: 10px;
+	visibility: hidden;
+	position: absolute;		
+	width: 60px;					
+	height: 30px;					
+	padding: 2px;			
+	font: .8em;	
+	background: #FFFFCC;	
+	border: 1px solid black;		
+	border-radius: 8px;			
+	pointer-events: none;
+	opacity: .6;		
 }
-div.spinner2 > div
+p.y
 {
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	background-color: #6DACFD;
-	height: 100%;
-	width: 30px;
-	display: inline-block;
-	-webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
-			animation: sk-stretchdelay 1.2s infinite ease-in-out;
-}
-div.spinner2 div.rect2
-{
-	-webkit-animation-delay: -1.1s;
-			animation-delay: -1.1s;
-}
-div.spinner2 div.rect3
-{
-	-webkit-animation-delay: -1.0s;
-			animation-delay: -1.0s;
-}
-div.spinner2 div.rect4
-{
-	-webkit-animation-delay: -0.9s;
-			animation-delay: -0.9s;
-}
-div.spinner2 div.rect5
-{
-	-webkit-animation-delay: -0.8s;
-			animation-delay: -0.8s;
+	margin: 0px;
+	margin-top: 3px;
 }
