--- a/src/assets/css/loading.css
+++ b/src/assets/css/loading.css
@@ -12,11 +12,14 @@ p.loading1
 	position: absolute;
 	top: 345px;
 	left: calc(50% - 50px);
-	width: 110px;
+	width: 104px;
 	height: 30px;
 	margin: auto;
 	display: block;
 	color: #FFFFFF;
+	background-color: #6DACFD;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	padding: 2px;
 	font-size: 1.5em;
 }
 div.spinner
