--- a/src/assets/css/profile.css
+++ b/src/assets/css/profile.css
@@ -18,7 +18,8 @@ div.result_body
 {
 	display: flex;
 	flex-direction: column;
-	width: 460px;
+	padding: 20px;
+	padding-right: 10px;
 	height: auto;
 }
 div.pdiv
@@ -27,8 +28,8 @@ div.pdiv
 			animation: slide-right .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s both;
 	width: 220px;
 	height: 220px;
+	margin-bottom: 20px;
 	align-self: center;
-	margin-top: 20px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 img.image
@@ -45,7 +46,7 @@ div.user
 	display: block;
 	width: 400px;
 	height: auto;
-	margin: 20px;
+	margin-bottom: 20px;
 	padding: 10px;
 	background-color: #FFFFFF;
 	color: #000000;
@@ -87,8 +88,6 @@ div.rDiv
 	display: block;
 	width: 400px;
 	height: auto;
-	margin: 20px;
-	margin-top: 0px;
 	background-color: #FFFFFF;
 	color: #000000;
 	padding: 10px;
